--- a/i/is/isl/islcollective.com.html
+++ b/i/is/isl/islcollective.com.html
@@ -1,60 +1,46 @@
-<!--The following is the downloaded HTML source of the islcollective.com privacy policy that was archived on 2010-06-24.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100624105353id_/http%3A//islcollective.com/Your_Privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the islcollective.com privacy policy that was archived on 2010-08-24.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100824174519id_/http%3A//islcollective.com/Your_Privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
-	<title>iSLCollective.com - Where ESL teachers share their home-made worksheets</title>
-	<meta http-equiv="content-type" content="text/html; charset=iso-8859-1">
+	<title>iSLCollective.com - Free ESL worksheets made by teachers for teachers</title>
+	<meta http-equiv="content-type" content="text/html; charset=utf-8">
 	<meta name="keywords" content="iSLCollective, How to teach English, teaching ESL, teaching English, teaching English as a second language, TESL, TEFL, TESOL, ESL, EFL, ESOL, ESL teachers' community, teachers of English as a second language, ESL classroom, ESL links, ESL forum, ESL discussion board, ESL, EFL, free EFL, free ESL handouts, free ESL worksheets, free ESL printables, free ESL activities, free ESL exercises, free ESL resources, free ESL flashcards, free ESL lesson plans, free ESL games, free ESL materials">
 	<meta name="description" content="The Internet Second Language Collective is a free-to-use community website where English language teachers can share their home-made teaching materials with each other.">
+	<link rel="shortcut icon" href="http://islcollective.com/favicon.ico" type="image/x-icon">
+	<link rel="icon" href="http://islcollective.com/favicon.ico" type="image/x-icon">
+
 	<style type="text/css" title="currentStyle">
 	<!--
-		@import "http://www.islcollective.com/tpls/_inc/skin.css";
-		@import "http://www.islcollective.com/tpls/_inc/jquery-ui-1.7.2.custom.css";
-		@import "http://www.islcollective.com/tpls/_inc/scrollable-minimal.css";
-		@import "http://www.islcollective.com/tpls/_inc/scrollable-navig.css";
-		@import "http://www.islcollective.com/tpls/_inc/jquery.rating.css";
-		@import "http://www.islcollective.com/tpls/_inc/validationEngine.jquery.css";
-		@import "http://www.islcollective.com/tpls/_inc/fancybox/jquery.fancybox.css";
-		/*@import "http://www.islcollective.com/tpls/_inc/btn.css";*/
+		@import "http://islcollective.com/tpls/_inc/skin.css";
+		@import "http://islcollective.com/tpls/_inc/jquery-ui-1.7.2.custom.css";
+		@import "http://islcollective.com/tpls/_inc/scrollable-minimal.css";
+		@import "http://islcollective.com/tpls/_inc/scrollable-navig.css";
+		@import "http://islcollective.com/tpls/_inc/jquery.rating.css";
+		@import "http://islcollective.com/tpls/_inc/validationEngine.jquery.css";
+		@import "http://islcollective.com/tpls/_inc/fancybox/jquery.fancybox.css";
+		/*@import "http://islcollective.com/tpls/_inc/btn.css";*/
 		
 	  
 	-->
 	</style>
 	
-	<style type="text/css">
-	  .clearfix:after {
-	    content: ".";
-	    display: block;
-	    height: 0;
-	    clear: both;
-	    visibility: hidden;
-	    }
-	.clearfix {display: inline-block;}  /* for IE/Mac */
-	</style><!-- main stylesheet ends, CC with new stylesheet below... -->
-	<!--[if IE]>
-	<style type="text/css">
-	  .clearfix {
-	    zoom: 1;     /* triggers hasLayout */
-	    display: block;     /* resets display for IE/Win */
-	    }  /* Only IE can see inside the conditional comment
-	    and read this CSS rule. Don't ever use a normal HTML
-	    comment inside the CC or it will close prematurely. */
-	</style>
-	<![endif]-->
+	<style type="text/css">.clearfix:after { content: "."; display: block; height: 0; clear: both; visibility: hidden; } .clearfix {display: inline-block;}</style>
+	<!--[if IE]><style type="text/css">.clearfix { zoom: 1; display: block; }</style><![endif]-->
 	
-	<script type="text/javascript" src="http://www.islcollective.com/tpls/_inc/jquery-1.3.2.min.js"></script>
-	<script type="text/javascript" src="http://www.islcollective.com/tpls/_inc/jquery.mousewheel.min.js"></script>
-	<script type="text/javascript" src="http://www.islcollective.com/tpls/_inc/jquery-ui-1.7.2.custom.min.js"></script>
-		<script type="text/javascript" src="http://www.islcollective.com/tpls/_inc/jquery.ezpz_hint.min.js"></script>
-	<script type="text/javascript" src="http://www.islcollective.com/tpls/_inc/jquery.tools.min.js"></script>
-	<script type="text/javascript" src="http://www.islcollective.com/tpls/_inc/jquery.MetaData.js"></script>
-	<script type="text/javascript" src="http://www.islcollective.com/tpls/_inc/jquery.rating.pack.js"></script>
-	<script type="text/javascript" src="http://www.islcollective.com/tpls/_inc/jquery.autogrow.js"></script>
-	<script type="text/javascript" src="http://www.islcollective.com/tpls/_inc/jquery.corner.js"></script>
-	<script type="text/javascript" src="http://www.islcollective.com/tpls/_inc/jquery.validationEngine.js"></script>
-	<script type="text/javascript" src="http://www.islcollective.com/tpls/_inc/showhide.js"></script>
-	<script type="text/javascript" src="http://www.islcollective.com/tpls/_inc/fancybox/jquery.easing.1.3.js"></script>
-	<script type="text/javascript" src="http://www.islcollective.com/tpls/_inc/fancybox/jquery.fancybox-1.2.1.pack.js"></script>
+		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4/jquery.min.js" type="text/javascript"></script>
+	<script type="text/javascript" src="http://islcollective.com/tpls/_inc/jquery.mousewheel.min.js"></script>
+	<script type="text/javascript" src="http://islcollective.com/tpls/_inc/jquery-ui-1.7.2.custom.min.js"></script>
+		<script type="text/javascript" src="http://islcollective.com/tpls/_inc/jquery.ezpz_hint.min.js"></script>
+	<script type="text/javascript" src="http://islcollective.com/tpls/_inc/jquery.tools.min.js"></script>
+	<script type="text/javascript" src="http://islcollective.com/tpls/_inc/jquery.MetaData.js"></script>
+	<script type="text/javascript" src="http://islcollective.com/tpls/_inc/jquery.rating.pack.js"></script>
+	<script type="text/javascript" src="http://islcollective.com/tpls/_inc/jquery.autogrow.js"></script>
+	<script type="text/javascript" src="http://islcollective.com/tpls/_inc/jquery.corner.js"></script>
+	<script type="text/javascript" src="http://islcollective.com/tpls/_inc/jquery.validationEngine-en.js"></script>
+	<script type="text/javascript" src="http://islcollective.com/tpls/_inc/jquery.validationEngine.js"></script>
+	<script type="text/javascript" src="http://islcollective.com/tpls/_inc/showhide.js"></script>
+	<script type="text/javascript" src="http://islcollective.com/tpls/_inc/fancybox/jquery.easing.1.3.js"></script>
+	<script type="text/javascript" src="http://islcollective.com/tpls/_inc/fancybox/jquery.fancybox-1.2.1.pack.js"></script>
 		<script type="text/javascript">
 	
 	/* <![CDATA[ */
@@ -127,11 +113,11 @@
 				closeOnEscape: false,
 				width: 300
 			});
-			$(".upload").submit(function () {
+/*			$(".upload").submit(function () {
 				$('.ui-dialog-titlebar-close').css('display', 'none');
 			  $('#loadingDialog').dialog('open');
 				return true;
-			});
+			}); */
 			$('#uploadDialog').dialog({
 				autoOpen: false,
 				bgiframe: true,
@@ -150,6 +136,57 @@
 				return false;
 			});
 
+			
+									bMustNewLang = false;
+							
+			$("#langDialog").dialog({
+				autoOpen: bMustNewLang,
+				bgiframe: true,
+				modal: true,
+				resizable: false,
+				draggable: false,
+				closeOnEscape: true,
+				width: 300,
+				buttons: {
+					OK: function() {
+
+						$.ajax({
+							type: "POST",
+							url: "../newlang.php",
+							success: function(msg){
+								$('#langSuccessDialog').dialog('open');
+								location.reload(true);
+							}
+						});
+
+					},
+					Cancel: function() {
+						if (bMustNewLang) {
+							location = "/worksheets";
+						} else {
+							$(this).dialog('close');
+						}
+					}
+				},
+				close: function(event, ui) {
+					if (bMustNewLang) location = "/worksheets";
+				}
+			});
+			$('.langDialog_link').click(function(){
+				$('#langDialog').dialog('open');
+				return false;
+			});
+			$("#langSuccessDialog").dialog({
+				autoOpen: false,
+				bgiframe: true,
+				modal: true,
+				resizable: false,
+				draggable: false,
+				closeOnEscape: false,
+				width: 300
+			});
+
+
 			// mypage/settings datapicker
 			$('.mypageUserSetting #cBirthday').datepicker({
 				changeMonth: true,
@@ -164,15 +201,35 @@
 		$(document).ready(function() {
 			$('textarea.expanding').autogrow();	// textarea autogrow
 
-	    $('#tabs').show();	// show tabs when document ready
+			$('#tabs').show();	// show tabs when document ready
 
 			// init form validationEngine
 			$("#validForm").validationEngine({ success: false, failure: function() {} });
 			$("#validForm2").validationEngine({ success: false, failure: function() {} });
 			$("#validForm3").validationEngine({ success: false, failure: function() {} });
+			$("#validFormUpload").validationEngine({ success: function() { $('.ui-dialog-titlebar-close').css('display', 'none'); $('#loadingDialog').dialog('open'); document.validFormUpload.submit(); return true; }, failure: function() {} });
 
 			//ws big picture popup
 			$(".worksheetsPage .thumb a").fancybox();
+
+			//registration & mypage/usersettings language options
+			if ($("#validForm div.formLayout input[id='chkLang']:checked:enabled").length <= 1) {
+				$("#validForm div.formLayout #boxdeflang").attr("disabled","disabled");
+			}
+			$("div.mypageUserSetting #validForm div.formLayout input[id='chkLang']:checked:enabled").attr("disabled","disabled");
+
+			$("#validForm div.formLayout input[id='chkLang']").change(function() {
+				if ($("#validForm div.formLayout input[id='chkLang']:checked:enabled").length > 1) {
+					$("#validForm div.formLayout #boxdeflang").attr("disabled","");
+				} else {
+					$("#validForm div.formLayout #boxdeflang").attr("disabled","disabled");
+					$("#validForm div.formLayout #boxdeflang").attr('value', $("#validForm div.formLayout input[id='chkLang']:checked:enabled").attr("alt"));
+				}
+			});
+
+			$("div.mypageUserSetting #validForm input[type='submit']").click(function() {
+				$("div.mypageUserSetting #validForm div.formLayout input[id='chkLang']").attr("disabled","");
+      });
 
 		});
 
@@ -186,36 +243,41 @@
 
 	<div id="mainHead">
 		<div class="headLogo">
-			<a href="http://www.islcollective.com"><img src="http://www.islcollective.com/tpls/_img/mainHeadLogo.png" width="330" height="50" alt="iSLCollective"></a>
-			&nbsp;&nbsp;&nbsp;&nbsp;Where ESL teachers share their home-made worksheets
+			<a href="http://islcollective.com"><img src="http://islcollective.com/tpls/_img/mainHeadLogo.png" width="303" height="50" alt="iSLCollective"></a>
+			&nbsp;&nbsp;&nbsp;&nbsp;Free ESL worksheets made by teachers for teachers
+			<div class="lang">English</div>
 		</div>
 
-		<div class="headLinks">
-			<a href="http://www.islcollective.com/faq">FAQ</a> | <a href="http://www.islcollective.com/about">About iSLCollective</a>		</div>
+		<div class="headFlags">
+			<img src="http://islcollective.com/tpls/_img/flag_EN_big.png" alt="English">			<a href="http://islcollective.com?dl=de"><img src="http://islcollective.com/tpls/_img/flag_DE_small.png" alt="Deutsch">		</a></div><a href="http://islcollective.com?dl=de">
+
+		</a><div class="headLinks"><a href="http://islcollective.com?dl=de">
+			</a><a href="http://islcollective.com/faq">FAQ</a> | <a href="http://islcollective.com/about">About iSLCollective</a>		</div>
 
 		<div class="headLogin">
-							<div class="login">
+							<div class="login rounded">
 
-	<form name="frmlogin" action="http://www.islcollective.com/login" method="post">
+	<form name="frmlogin" action="http://islcollective.com/login" method="post">
 		<input type="hidden" name="mode" id="mode" value="get">
 
-	  <table style="margin: 5px 0 0 8px;">
-	  	<tbody><tr>
-				<td colspan="2" width="210"><input type="text" name="txtusername" id="txtusername" title="Username" class="loginHint" tabindex="1"></td>
-				<td rowspan="2">
-					<a href="http://www.islcollective.com/registration" class="register">Register</a><br>
-					<a href="http://www.islcollective.com/forgot_password" class="forgot">Login problem?</a>
-				</td>
-	  	</tr>
-	  	<tr>
-	  		<td><input type="password" name="txtpassw" id="txtpassw" title="Password" style="margin: 4px 0 0 0;" class="loginHint" tabindex="2"></td>
-	  		<td><input type="submit" value="" class="submit" tabindex="3"></td>
-	  	</tr>
-	  	<tr>
-	  	</tr>
-	  </tbody></table>
+	  <div class="inputFields1">
+	  	<input type="text" name="txtusername" id="txtusername" title="Username" class="loginHint" tabindex="1">
+	  </div>
+  	<div class="inputFields2">
+			<input type="password" name="txtpassw" id="txtpassw" title="Password (Case sensitive)" class="loginHint" tabindex="2">
+		</div>
 
-	  <div class="remember"><input type="checkbox" name="txtcookie" id="txtcookie" class="checkbox" value="on" tabindex="4">Remember me</div>
+		<div class="inputCheckbox">
+			<input type="checkbox" name="txtcookie" id="txtcookie" class="checkbox" value="on" tabindex="4"> Remember me
+		</div>
+		<div class="inputSubmit">
+		  <input type="submit" value="" class="submit" tabindex="3">
+		</div>
+
+		<div class="links">
+			<a href="http://islcollective.com/registration" class="register">Register</a><br>
+			<a href="http://islcollective.com/forgot_password" class="forgot">Login problem?</a>
+		</div>
 
 		
 	</form>
@@ -226,8 +288,8 @@
 					</div>
 
 		<div class="menu">
-			<div class="item"><a href="http://www.islcollective.com/worksheets">Worksheets</a></div>
-			<div class="item"><a href="http://www.islcollective.com/members">Members</a></div>
+			<div class="item"><a href="http://islcollective.com/worksheets">Worksheets</a></div>
+			<div class="item"><a href="http://islcollective.com/members">Members</a></div>
 			<div class="item">My Page</div>
 			<div class="item"><a href="#" class="registerDialog_link">Forum</a></div>
 			<div class="item"><a href="#" class="registerDialog_link">Upload</a></div>
@@ -276,15 +338,14 @@
 </div>		</div>
 		</td><td>
 		<div class="rightCol">
-			<div class="upload">
-	<div class="headtext"><a href="#" class="registerDialog_link">UPLOAD</a></div>
-	<a href="#" class="registerDialog_link">Help the community grow, share your home-made worksheets with fellow<br>teachers.</a>
+			<div class="adv">
+			<a href="http://islcollective.com?dl=de"><img src="http://islcollective.com/tpls/_img/rightColAdvDE.png" width="177" height="133">
+		</a>
 </div>
 
-<div class="addthis">
-	<!-- AddThis Button BEGIN -->
-	<a class="addthis_button" href="http://www.addthis.com/bookmark.php?v=250&amp;pub=islcollective"><img src="http://s7.addthis.com/static/btn/v2/lg-share-en.gif" width="125" height="16" alt="Bookmark and Share" style="border:0"></a><script type="text/javascript" src="http://s7.addthis.com/js/250/addthis_widget.js?pub=islcollective"></script>
-	<!-- AddThis Button END -->
+<div class="upload">
+		<div class="headtext"><a href="#" class="registerDialog_link">UPLOAD</a></div>
+	<a href="#" class="registerDialog_link">We share our worksheets with you. Will you share yours with us? We'll be  happy even for a single upload.</a>
 </div>
 
 
@@ -295,21 +356,23 @@
 
 	<div id="mainFoot">
 		<div class="content">
-			<a href="http://www.islcollective.com/Terms_of_Use">Terms of Use</a> |
-			<a href="http://www.islcollective.com/Your_Privacy">Your Privacy</a> |
-			<a href="http://www.islcollective.com/Creative_Commons">Your Copyright: Creative Commons</a> |
-			<a href="http://www.islcollective.com/Advertise_with_Us">Advertise with Us</a> |
-			<a href="http://www.islcollective.com/Press">Press</a> |
-			<a href="http://www.islcollective.com/Links">Links</a> |
-			<a href="http://www.islcollective.com/Contact">Contact The iSLCollective Team</a>
+			<a href="http://islcollective.com/Terms_of_Use">Terms of Use</a> |
+			<a href="http://islcollective.com/Your_Privacy">Your Privacy</a> |
+			<a href="http://islcollective.com/Creative_Commons">Your Copyright: Creative Commons</a> |
+			<a href="http://islcollective.com/Advertise_with_Us">Advertise with Us</a> |
+			<a href="http://islcollective.com/Press">Press</a> |
+			<a href="http://islcollective.com/links">Links</a> |
+			<a href="http://islcollective.com/Contact">Contact The iSLCollective Team</a>
   	</div>
 	</div>
 
 </div>
 
-<div id="registerDialog" title="Registration request" class="displayNone">Please register and login to use this function!</div>
+<div id="registerDialog" title="Please register!" class="displayNone">Please register and login to use this function!</div>
 <div id="forumDialog" title="Forum" class="displayNone">Coming soon ...</div>
-<div id="loadingDialog" title="Loading..." class="displayNone"><br><br>Your worksheet is being uploaded ...<br><br><img src="http://www.islcollective.com/tpls/_img/loading.gif" width="32" height="32" alt="iSLCollective"></div>
+<div id="loadingDialog" title="Loading ..." class="displayNone"><br><br>Your worksheet is being uploaded ...<br><br><img src="http://islcollective.com/tpls/_img/loading.gif" width="32" height="32" alt="iSLCollective"></div>
+<div id="langDialog" title="You're not a member yet." class="displayNone">Would you like to become a member of iSLCollective  ?</div>
+<div id="langSuccessDialog" title="You're not a member yet." class="displayNone">Congrats, you're now a member here, too. :) Please wait until page is refreshed!</div>
 
 
 <script type="text/javascript">
