--- a/l/li/liv/livephish.com.html
+++ b/l/li/liv/livephish.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the livephish.com privacy policy that was archived on 2010-05-24.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100524021811id_/http%3A//www.livephish.com/privacy.aspx) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the livephish.com privacy policy that was archived on 2010-08-26.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100826012800id_/http%3A//www.livephish.com/privacy.aspx) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head><title>
 	LivePhish.com - Privacy Policy -  Live Phish MP3 Downloads FLAC Downloads Live CDs
@@ -85,7 +85,7 @@ function preloadImages() {
 
 <table width="730" border="0" cellspacing="0" cellpadding="0" align="center">
 
-<tbody><tr><td width="445"><table width="730" border="0" cellspacing="0" cellpadding="0"><tbody><tr><td width="365"><a href="http://www.livephish.com"><img src="/assets/phish/images/head01.gif" alt="" height="124" width="258" border="0"><img src="/assets/phish/images/head01_02.gif" alt="" height="124" width="107" border="0"></a></td><td><img src="/assets/phish/images/radiologo.gif" alt="" height="58" width="267" border="0"><div id="lpRadio"></div><img src="/assets/phish/images/headSpacer.gif" alt="" height="21" width="267" border="0"></td><td><img src="/assets/phish/images/header04.gif" alt="" height="124" width="98" border="0"></td></tr></tbody></table></td></tr>
+<tbody><tr><td width="445"><table width="730" border="0" cellspacing="0" cellpadding="0"><tbody><tr><td width="365"><a href="http://www.livephish.com"><img src="/assets/phish/images/head01.gif" alt="" height="124" width="258" border="0"><img src="/assets/phish/images/head01_02.gif" alt="" height="124" width="107" border="0"></a></td><td><img src="/assets/phish/images/radiologo.gif" alt="" height="58" width="267" border="0"><div id="lpRadio"><a href="/radio/listen.m3u"><img src="/assets/phish/images/radio_placeholder.gif" alt="Live Phish Radio" border="0" width="267" height="45"></a></div><img src="/assets/phish/images/headSpacer.gif" alt="" height="21" width="267" border="0"></td><td><img src="/assets/phish/images/header04.gif" alt="" height="124" width="98" border="0"></td></tr></tbody></table></td></tr>
 <tr><td>
 					<script type="text/javascript">
 						var so = new SWFObject('/assets/phish/radio/phishRadio.swf','mpl','267','45','9');
@@ -297,7 +297,7 @@ If you have any questions or concerns about the LivePhish.com online policy for 
 
 
 <p align="center" class="footer">
-© Phish<br>
+© Phish | powered by <a class="footer" href="http://nugs.net" target="_new"><strong>nugs.net</strong></a><br>
 <a class="footer" href="http://www.livephish.com/terms.aspx">TERMS OF USE</a> |
 <a class="footer" href="http://www.livephish.com/privacy.aspx">PRIVACY POLICY</a> |
 <a class="footer" href="http://www.livephish.com/support.aspx">CUSTOMER SERVICE</a> |
