--- a/f/fi/fin/findashemalelover.com.html
+++ b/f/fi/fin/findashemalelover.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the findashemalelover.com privacy policy that was archived on 2010-05-02.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100502151149id_/http%3A//www.findashemalelover.com/%3Fs%3Dprivacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the findashemalelover.com privacy policy that was archived on 2010-08-26.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100826020226id_/http%3A//www.findashemalelover.com/%3Fs%3Dprivacy_policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html><head>
     <base href="http://www.findashemalelover.com/">    <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
@@ -7,6 +7,8 @@
 <meta name="Description" content="Shemales are very special and there is very few daating sites catering to them. We are the BIGGEST Shemale dating site with shemale singles looking for YOU! Signup Today and join the Community!">
 	<title>.: Find A Shemale Lover - Shemales Looking For YOU! (NEW!)</title>
     
+<link type="text/css" href="templates/_general/css/default_ver1.css" rel="stylesheet">
+
 <link type="text/css" href="templates/findashemalelover/template.css" rel="stylesheet">    <script type="text/javascript" src="javascript/core/swfobject.js"></script>
 <script type="text/javascript" src="javascript/functions.js"></script>
 <script type="text/javascript" src="request.js"></script>
@@ -72,26 +74,25 @@
 						<table width="100%" cellpadding="0" cellspacing="0" border="0">
 							<tbody><tr>
 								<td valign="top" style="text-align: left; padding: 5px 5px 5px 5px; width: 699px;">
-		
-<table border="0" cellpadding="0" cellspacing="0" class="ppolicy">
-<tbody><tr>
-     <td colspan="2">
-       <table border="0" cellpadding="0" cellspacing="0" width="100%"> 
-       <tbody><tr>
-            <td colspan="2"><img src="/images/xxxx-pixel.gif" height="10" width="1">
-            </td>
-          </tr>
-          <tr>
-            <td colspan="2">
-
+		<table border="0" cellpadding="0" cellspacing="0" class="ppolicy">
+  <tbody>
+    <tr>
+      <td colspan="2">
+        <table border="0" cellpadding="0" cellspacing="0" width="100%"> 
+          <tbody>
+            <tr>
+              <td colspan="2">
+                <img src="/img/pixel.gif" height="10" width="1">
+              </td>
+            </tr>
+            <tr>
+              <td colspan="2">
+                <div id="privacy_policy" style="margin-left:10px;">
          <p align="center"><b><font size="+1">Privacy  Policy</font></b> <br>
-
-
-        </p><p>findashemalelover (the "Site") is licensed to <b>First Beat Media Inc.</b></p> 
+        </p><p>findashemalelover (the "Site") is licensed to <b>Hundies LTD.</b></p> 
          
-            <p>Our postal address is <br><span class="bold">5722 S Flamingo Road<br>Cooper City, FL  33330</span></p> 
-            <p>We can be reached via e-mail at
-              information ( at ) firstbeatmedia dot com</p> 
+            <p>Our postal address is <br><span class="bold" style="font-weight:bold;">Hundies LTD<br>Amory Building, Suite #4757, Victoria Road<br>Basseterre, SAINT KITTS AND NEVIS</span></p> 
+            <p>We can be reached via e-mail at <span class="bold" style="font-weight:bold;">legal@hundiesltd.com</span></p> 
             <p>This Privacy Policy Statement sets forth the policies and
               practices with respect to information or data gathered regarding subscriber and
               members of this Site. This is an online Site that expressly and strictly limits
@@ -144,7 +145,7 @@
               function at: <a href="http://www.cookiecentral.com/" target="_blank">http://www.cookiecentral.com/</a>.</p> </blockquote>
             <p class="underline"><b><u>Use of Personal Subscriber Information.</u></b></p> 
         <blockquote>
-                        <p>The subscriber expressly agrees that the Site may use any personal information
+            <p>The subscriber expressly agrees that the Site may use any personal information
                that has been provided by the subscriber or that has been collected by the Site 
                about the subscriber for any purpose, including without limitation, technical, 
                 administration, research and development, customer administration, marketing, 
@@ -215,25 +216,24 @@
               are unconditionally accepting all of those terms and conditions. Some of those
               terms and conditions may also affect the right of this Site to use information
               that it has gathered from subscribers.</p> 
-            <p>In the event of any conflicts between the <a href="/?s=tos">Membership Terms the Conditions</a> and this
+            <p>In the event of any conflicts between the <a href="/?s=termsofservice">Membership Terms the Conditions</a> and this
               Privacy Policy Statement, the provisions of this
               Privacy Policy shall control.<br></p>
         </blockquote>
-
-
-
-            </td>
-         </tr>
-         <tr>
-           <td><img src="/images/xxxx-pixel.gif" height="20" width="1">
-           </td>
-         </tr></tbody>
+                </div>
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <img src="/img/pixel.gif" height="20" width="1">
+              </td>
+            </tr>
+          </tbody>
         </table>
-     </td>
-    </tr></tbody>
-      </table>
-
-									</td>
+      </td>
+    </tr>
+  </tbody>
+</table>									</td>
 								</tr>
 							</tbody></table>
 						</div>
@@ -333,10 +333,9 @@
   
 
 <div style="text-align: center; color:#000000; font-size: 12px; border-top:1px solid #dfdfdf; width:978px; margin:10px auto; padding:10px 0;">
-    		- <a href="?s=contact" class="toolbarBottom" rel="nofollow">Contact us</a> - <a href="?s=help" class="toolbarBottom" rel="nofollow">Help/FAQ</a> - <a href="?s=ppolicy" class="toolbarBottom" rel="nofollow">Privacy Policy</a> - <a href="?s=tofs" class="toolbarBottom" rel="nofollow">Terms and Conditions</a>  -<br>All works on this site Copyright © 2006-10 findashemalelover.com<br><br>
+    		- <a href="?s=contact" class="toolbarBottom" rel="nofollow">Contact us</a> - <a href="?s=help" class="toolbarBottom" rel="nofollow">Help/FAQ</a> - <a href="?s=privacy_policy" class="toolbarBottom" rel="nofollow">Privacy Policy</a> - <a href="?s=termsofservice" class="toolbarBottom" rel="nofollow">Terms and Conditions</a>  -<br>All works on this site Copyright © 2006-10 findashemalelover.com<br><br>
           </div>
 <script type="text/javascript">var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));</script><script src="https://ssl.google-analytics.com/ga.js" type="text/javascript"></script>
 <script type="text/javascript">var pageTracker = _gat._getTracker("UA-1777713-11");pageTracker._trackPageview();</script>  
-
 
 </body></html>
