--- a/s/sc/scr/scratchlive.net.html
+++ b/s/sc/scr/scratchlive.net.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the scratchlive.net privacy policy that was archived on 2010-06-28.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100628023416id_/http%3A//www.scratchlive.net/legal/website-privacy-policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the scratchlive.net privacy policy that was archived on 2010-08-27.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100827153529id_/http%3A//www.scratchlive.net/legal/website-privacy-policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3c.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3c.org/1999/xhtml"><head>
 	<title>Serato Websites Privacy Policy | ScratchLive.net</title>
@@ -13,16 +13,17 @@
 <link rel="shorturl" href="http://sera.to/lwpp">
 <link rel="canonical" href="http://serato.com/legal/website-privacy-policy">
 
-<script src="/sharedjs/jquery-1.2.6.min.js?20081022.2205" type="text/javascript"></script>
-<script src="/sharedjs/jquery.color.js?20081022.2205" type="text/javascript"></script>
-<script src="/sharedjs/base.js?20100414.0007" type="text/javascript"></script>
-<link href="/sharedcss/base.css?20100624.2305" rel="stylesheet" type="text/css">
-<link href="/css/base.css?20100223.2106" rel="stylesheet" type="text/css">
+<script src="/sharedjs/jquery-1.2.6.min.js?20100705.1900" type="text/javascript"></script>
+<script src="/sharedjs/jquery.color.js?20100705.1900" type="text/javascript"></script>
+<script src="/sharedjs/base.js?20100825.2044" type="text/javascript"></script>
+<link href="/sharedcss/base.css?20100825.2044" rel="stylesheet" type="text/css">
+<link href="/css/base.css?20100727.2225" rel="stylesheet" type="text/css">
 	
-<!--[if lte IE 6]><link href="/css/ie6.css?20081022.2203" rel="stylesheet" type="text/css" />
+<!--[if lte IE 6]><link href="/css/ie6.css?20100727.2225" rel="stylesheet" type="text/css" />
 <![endif]-->
-<!--[if IE 7]><link href="/css/ie7.css?20091014.1537" rel="stylesheet" type="text/css" />
+<!--[if IE 7]><link href="/css/ie7.css?20100718.2113" rel="stylesheet" type="text/css" />
 <![endif]-->
+
 
 	<link href="/sharedcss/content.css" rel="stylesheet" type="text/css">
 </head>
@@ -48,41 +49,41 @@
 </noscript>
 
 <div id="header">
-<div class="container">
 
-<img src="/images/template/top2.gif" usemap="#logo" style="position:absolute;left:0;top:0;" border="0">
-<map name="logo" id="logo">
-	<area shape="rect" coords="44,61,349,107" href="/" alt="Home">
-</map>
-<img src="/images/template/top3.gif" style="position:absolute;right:152px;top:0">
-<img src="/images/template/top4.gif" style="position:absolute;right:0;top:0">
+	<div class="container">
 
-<div id="searchbox">
-    <form action="/search">
-        <input type="hidden" name="js" value="0" class="input_js_enabled">
-        <input type="hidden" name="mk" value="scratchlive">
-        <input type="text" value="Search ScratchLive.net" name="q" onclick="if( this.value == 'Search ScratchLive.net') this.value = '';">
-		<input type="image" src="/images/template/go.gif" onclick="if( jQuery( '#searchbox input[type=text]' ).val() == 'Search ScratchLive.net') jQuery( '#searchbox input[type=text]' ).val(''); doSearch();">
-    </form>
+		<img src="/images/template/top2.gif" usemap="#logo" style="position:absolute;left:0;top:0;" border="0">
+		<map name="logo" id="logo">
+			<area shape="rect" coords="44,61,349,107" href="/" alt="Home">
+		</map>
+		<img src="/images/template/top3.gif" style="position:absolute;right:152px;top:0">
+		<img src="/images/template/top4.gif" style="position:absolute;right:0;top:0">
+
+		<div id="searchbox">
+			<form action="/search">
+				<input type="hidden" name="js" value="0" class="input_js_enabled">
+				<input type="hidden" name="mk" value="scratchlive">
+				<input type="text" value="Search ScratchLive.net" name="q" onclick="if( this.value == 'Search ScratchLive.net') this.value = '';">
+				<input type="image" src="/images/template/go.gif" onclick="if( jQuery( '#searchbox input[type=text]' ).val() == 'Search ScratchLive.net') jQuery( '#searchbox input[type=text]' ).val(''); doSearch();">
+			</form>
+		</div>
+
+		<div id="navbar">
+			<ul>
+				<li class="home"><a href="/" title="Visit the Serato home page">Home</a></li>
+				<li class="news"><a href="/news" title="Read Serato news">News</a></li>
+				<li class="products"><a href="/products" title="Check out our products">Products</a></li>
+				<li class="downloads"><a href="/downloads" title="Download software from Serato">Downloads</a></li>
+				<li class="support"><a href="/support" title="Get support for your Serato products">Support</a></li>
+				<li class="videos"><a href="/videos" title="Watch videos from Serato">Videos</a></li>
+				<li class="purchase"><a href="/purchase" title="Buy Serato products">Purchase</a></li>
+				<li class="forum"><a href="/forum" title="Get involved in the Serato community">Forum</a></li>
+			</ul>
+		</div>
+
+	</div>
+
 </div>
-
-<div id="navbar">
-    <img src="/images/template/navigation.gif" usemap="#navigation" alt="Home - News - Products - Downloads - Support - Videos - Purchase - Forum" border="0">
-    <map name="navigation" id="navigation">
-        <area shape="rect" coords="0,0,53,23" href="/" alt="Home">
-        <area shape="rect" coords="59,0,132,23" href="/news" alt="News">
-        <area shape="rect" coords="138,0,234,23" href="/products" alt="Products">
-        <area shape="rect" coords="240,0,351,23" href="/downloads" alt="Downloads">
-        <area shape="rect" coords="357,0,448,23" href="/support" alt="Support">
-        <area shape="rect" coords="454,0,534,23" href="/videos" alt="Videos">
-        <area shape="rect" coords="540,0,637,23" href="/purchase" alt="Purchase">
-        <area shape="rect" coords="643,0,700,23" href="/forum" alt="Forum">
-    </map>
-</div>
-
-</div> <!-- /container -->
-</div> <!-- /header -->
-
 	<div id="container" class="container">
 
 		<div id="breadcrumbs">
@@ -189,6 +190,19 @@
 	</div>
 
 
+<div class="newsletter-signup greybox">
+	<p>Sign up for the <strong>Serato Newsletter</strong></p>
+
+	<form action="/parts/forms/newsletter_signup" method="post" id="newsletter-signup-sidebar-form">
+		<div>
+			<input type="hidden" name="newsletter_signup" value="1">
+			<input type="text" name="email" onkeyup="jQuery( '#newsletter-signup-sidebar-form input[type=submit]' ).attr( 'disabled', this.value == '' );" onchange="jQuery( '#newsletter-signup-sidebar-form input[type=submit]' ).attr( 'disabled', this.value == '' );">
+			<input type="submit" value="Join" disabled="true">
+		</div>
+	</form>
+
+	<div class="message"></div>
+</div>
 		</div> <!-- /sidebar -->
 
 	</div> <!-- /container -->
